# Compatibility-Layer-for-DLSS-2-FSR-and-DSR-in-Minecraft-1.12.2

./: Blank diagram.csv  CMakeLists.txt  Pseudo Code  README.md  build.gradle
native/: FSRBridge.cpp  InteropImage.cpp  dlss_bridge.cpp  dsr_bridge.cpp  interop_bridge.cpp
native/include/: DLSSBridge.h  DSRScaler.h  FSRBridge.h  InteropBridge.h  interop_image.h
src/: README.md
src/main/java/com/fattie/compatlayer/: CompatLayerMod.java
src/main/java/com/fattie/compatlayer/client/gui/: GuiDLSSConfigScreen.java
src/main/java/com/fattie/compatlayer/client/hud/: UpscalerHUDOverlay.java
src/main/java/com/fattie/compatlayer/client/input/: KeybindHandler.java
src/main/java/com/fattie/compatlayer/command/: DLSSCommand.java
src/main/java/com/fattie/compatlayer/config/: CompatConfig.java  DLSSSettings.java
src/main/java/com/fattie/compatlayer/nativebridge/: DLSSBridge.java  DSRScaler.java  FSRBridge.java  NativeLoader.java  UpscalerException.java
src/main/java/com/fattie/compatlayer/util/: PerformanceLogger.java
src/main/resources/assets/compactlayer/lang/: en_us.lang
